SNC-1456: Apply mr review comments.

--- a/contrib/cmake/CMakeLists.txt
+++ b/contrib/cmake/CMakeLists.txt
@@ -311,6 +311,8 @@ set (MOC_INPUT
     ${MEGAsyncDir}/control/LoginController.h
     ${MEGAsyncDir}/control/AccountStatusController.h
     ${MEGAsyncDir}/control/EmailRequester.h
+    ${MEGAsyncDir}/control/IStatsEventHandler.h
+    ${MEGAsyncDir}/control/ProxyStatsEventHandler.h
 
     ${MEGAsyncDir}/gui/AlertItem.h
     ${MEGAsyncDir}/gui/AlertFilterType.h
@@ -757,6 +759,7 @@ set (SRCS
     ${MEGAsyncDir}/control/AccountStatusController.cpp
     ${MEGAsyncDir}/control/FileFolderAttributes.cpp
     ${MEGAsyncDir}/control/EmailRequester.cpp
+    ${MEGAsyncDir}/control/ProxyStatsEventHandler.cpp
 
     ${MEGAsyncDir}/UserAttributesRequests/DeviceName.cpp
     ${MEGAsyncDir}/UserAttributesRequests/MyBackupsHandle.cpp
