SNC-4387: Added target ColorThemeManager & revamp qml color target.

--- a/src/DesignTokensImporter/src/qml/CMakeLists.txt
+++ b/src/DesignTokensImporter/src/qml/CMakeLists.txt
@@ -5,8 +5,8 @@
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/targets)
 
 set(SOURCES ${SOURCES}
-    ${CMAKE_CURRENT_SOURCE_DIR}/QMLStyleGenerator.h
-    ${CMAKE_CURRENT_SOURCE_DIR}/QMLStyleGenerator.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/QMLThemeGenerator.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/QMLThemeGenerator.cpp
 
     PARENT_SCOPE
 )
