--- a/src/DesignTokensImporter/src/qml/targets/CMakeLists.txt
+++ b/src/DesignTokensImporter/src/qml/targets/CMakeLists.txt
@@ -3,10 +3,14 @@
 ##################################
 
 set(SOURCES ${SOURCES}
-    ${CMAKE_CURRENT_SOURCE_DIR}/IQMLStyleTarget.h
-    ${CMAKE_CURRENT_SOURCE_DIR}/QMLColorStyleTarget.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/QMLColorStyleTarget.h
-    ${CMAKE_CURRENT_SOURCE_DIR}/QMLStyleTargetFactory.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/IQMLThemeTarget.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/QMLColorThemeTarget.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/QMLColorThemeTarget.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/QMLThemeTargetFactory.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/QMLTargetUtils.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/QMLTargetUtils.cpp    
+    ${CMAKE_CURRENT_SOURCE_DIR}/QMLColorThemeManagerTarget.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/QMLColorThemeManagerTarget.h
 
     PARENT_SCOPE
 )
