SNC-4051-Support-Sets-Download-From-WebClient

--- a/contrib/cmake/CMakeLists.txt
+++ b/contrib/cmake/CMakeLists.txt
@@ -286,6 +286,7 @@ set (MOC_INPUT
     ${MEGAsyncDir}/notifications/NotificatorBase.h
     ${MEGAsyncDir}/notifications/${UiDir}/Notificator.h
 
+    ${MEGAsyncDir}/control/AsyncHandler.h
     ${MEGAsyncDir}/control/ConnectivityChecker.h
     ${MEGAsyncDir}/control/CrashHandler.h
     ${MEGAsyncDir}/control/ExportProcessor.h
@@ -295,6 +296,7 @@ set (MOC_INPUT
     ${MEGAsyncDir}/control/DownloadQueueController.h
     ${MEGAsyncDir}/control/MegaSyncLogger.h
     ${MEGAsyncDir}/control/MegaUploader.h
+    ${MEGAsyncDir}/control/ProtectedQueue.h
     ${MEGAsyncDir}/control/Preferences/Preferences.h
     ${MEGAsyncDir}/control/Preferences/EncryptedSettings.h
     ${MEGAsyncDir}/control/Preferences/EphemeralCredentials.h
@@ -302,6 +304,7 @@ set (MOC_INPUT
     ${MEGAsyncDir}/control/UpdateTask.h
     ${MEGAsyncDir}/control/ThreadPool.h
     ${MEGAsyncDir}/control/UserAttributesManager.h
+    ${MEGAsyncDir}/control/SetManager.h
     ${MEGAsyncDir}/control/TextDecorator.h
     ${MEGAsyncDir}/control/TransferBatch.h
     ${MEGAsyncDir}/control/DialogOpener.h
@@ -744,6 +747,7 @@ set (SRCS
     ${MEGAsyncDir}/control/HTTPServer.cpp
     ${MEGAsyncDir}/control/LinkProcessor.cpp
     ${MEGAsyncDir}/control/MegaUploader.cpp
+    ${MEGAsyncDir}/control/SetManager.cpp
     ${MEGAsyncDir}/control/UpdateTask.cpp
     ${MEGAsyncDir}/control/ThreadPool.cpp
     ${MEGAsyncDir}/control/CrashHandler.cpp
