--- a/src/MEGASync/google_breakpad/CMakeLists.txt
+++ b/src/MEGASync/google_breakpad/CMakeLists.txt
@@ -14,6 +14,33 @@ target_sources_conditional(google_breakpad
 )
 
 target_sources_conditional(google_breakpad
+   FLAG UNIX
+   PRIVATE
+   common/convert_UTF.c
+   common/linux/linux_libc_support.cc
+   common/string_conversion.cc
+   client/minidump_file_writer.cc
+)
+
+target_sources_conditional(google_breakpad
+   FLAG UNIX AND NOT APPLE
+   PRIVATE
+   client/linux/crash_generation/crash_generation_client.cc
+   client/linux/handler/exception_handler.cc
+   client/linux/handler/minidump_descriptor.cc
+   client/linux/minidump_writer/minidump_writer.cc
+   client/linux/minidump_writer/linux_dumper.cc
+   client/linux/minidump_writer/linux_ptrace_dumper.cc
+   client/linux/log/log.cc
+   common/linux/file_id.cc
+   common/linux/memory_mapped_file.cc
+   common/linux/safe_readlink.cc
+   common/linux/guid_creator.cc
+   common/linux/elfutils.cc
+
+)
+
+target_sources_conditional(google_breakpad
    FLAG APPLE
    PRIVATE
    client/mac/handler/exception_handler.cc
@@ -22,7 +49,6 @@ target_sources_conditional(google_breakpad
    client/mac/handler/minidump_generator.cc
    client/mac/handler/dynamic_images.cc
    client/mac/handler/breakpad_nlist_64.cc
-   client/minidump_file_writer.cc
    common/mac/macho_id.cc
    common/mac/macho_walker.cc
    common/mac/macho_utilities.cc
@@ -30,16 +56,13 @@ target_sources_conditional(google_breakpad
    common/mac/file_id.cc
    common/mac/bootstrap_compat.cc
    common/md5.cc
-   common/string_conversion.cc
-   common/linux/linux_libc_support.cc
-   common/convert_UTF.c
    common/mac/MachIPC.mm
 )
 
 # Include main path to locate Version.h
 target_include_directories(google_breakpad
     PUBLIC
-    $<$<BOOL:${WIN32}>:${CMAKE_CURRENT_LIST_DIR}/..>
+    "$<$<BOOL:${WIN32}>:${CMAKE_CURRENT_LIST_DIR}/..>"
     ${CMAKE_CURRENT_LIST_DIR}
 )
 
