--- a/src/MEGAShellExt/MEGAShellExt.vcxproj.filters
+++ b/src/MEGAShellExt/MEGAShellExt.vcxproj.filters
@@ -59,6 +59,12 @@
     <ClCompile Include="RegUtils.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MEGAinterface.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ShellExtNotASync.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ClassFactory.h">
@@ -86,6 +92,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="RegUtils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MEGAinterface.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ShellExtNotASync.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
