--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,5 +59,27 @@ include(target_platform_compile_options) # To add compile options depeding on th
 # Load common and per platform configuration for the project
 include(desktopapp_configuration)
 
+
+if(UNIX AND NOT APPLE)
+    # Set rpath and location for dirs accordingly:
+    # If CMAKE_INSTALL_PREFIX is set (not default), it will set rpath to to such prefix plus /opt/....
+    # If CMAKE_INSTALL_PREFIX is not set, it will set rpath to /opt/....
+    # Note: using cmake --install --prefix /some/prefix will not set rpath relative to that prefix
+    # The above can be used for building packages: in which install dir is a path construction folder that will not be there in packages
+    set(CMAKE_INSTALL_LIBDIR "opt/megasync/lib")
+    set(CMAKE_INSTALL_BINDIR "usr/bin") #override default "bin"
+
+    if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
+        message(STATUS "Overriding default CMAKE_INSTALL_PREFIX to /")
+        set(CMAKE_INSTALL_PREFIX "/") # override default /usr/local
+        set(RPATH_FOR_DYNAMIC_LIBS "/${CMAKE_INSTALL_LIBDIR}")
+    else()
+        # If explicit cmake prefix at cmake call time, make rpath relative to install dir
+        set(RPATH_FOR_DYNAMIC_LIBS "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}")
+    endif()
+
+    list(APPEND CMAKE_INSTALL_RPATH "${RPATH_FOR_DYNAMIC_LIBS}")
+endif()
+
 # Load the MEGA targets
 add_subdirectory(src)
